fix video image width bug on mobile (#287)

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -88,6 +88,7 @@ a{
 }
 .speaker-photo{
     width: 100px;
+    height: 100px;
     border-radius: 50%;
 }
 
@@ -102,7 +103,19 @@ a{
     margin-left: auto;
     margin-right: auto;
 }
+.row > * {
+    padding-left: 0px;
+}
 
+.sponsorship-list{
+    padding-left: 30px;
+    padding-bottom: 40px;
+}
+
+.videoimg{
+    max-width: 500px;
+    width: 100%;
+}
 .jsla-white-wrapper{
     text-align: left;
 }
